--- a/css/ukuran.css
+++ b/css/ukuran.css
@@ -309,3 +309,24 @@ dd {
 	background: #99FFCC;
 	color: #000;
 	}
+#whywhy {
+	overflow-y: scroll;
+	height: 700px;
+	padding-top: 20px;
+	padding-left: 20px;
+	padding-right: 5px;
+	transition: 2s ease-out;
+	}
+#whywhy:hover {
+	box-shadow: 0 1px 1px #CC0099 inset, 0 0 12px #CC0099;color: #000;outline: 0 none;
+	transition: 0.6s ease-out;
+	}
+.nav > li > a:hover {
+	background: linear-gradient(to bottom, #FF99FF, #FFFF99, #99FF66, #00CCFF);
+	color: #000;
+	border-radius: 10px;
+	}
+.well {
+	border: 1px solid #FF6600;
+	background: #FFF;
+	}
