--- a/css/ukuran.css
+++ b/css/ukuran.css
@@ -39,6 +39,32 @@ body {
   transition-timing-function: ease-out;
 	color: #FFF;
 }
+.padd{
+	padding-top: 15px;
+	padding-left: 15px;
+	}
+.back-shadow {
+	color: white;
+	border: 1px solid grey;
+	background: hsl(0, 15%, 10%);
+	box-shadow: 1px 1px 20px #333333;
+	border-radius: 10px;
+}
+#bla {
+	border: 3px solid #FFF;
+	width: 570px;
+	padding: 20px 30px;
+	border-radius: 20px;
+	margin: 20px;
+	color: #FFF;
+	}
+#bla:hover {
+	background: url('../img/noisy_grid.png') 0 0 repeat;
+	color: #000;
+	transition-property: background-color, color;
+	transition-duration: 1s;
+	transition-timing-function: ease-out;
+	}
 .ukuran {
 	height: 200px;
 	border-radius: 30px;
@@ -53,12 +79,22 @@ body {
 	padding-top: 15px;
 	padding-bottom: 15px;
 	}
+.borderhov {
+	transition: all 1s ease-in;
+	}
+.borderhov:hover {
+	border: 6px solid #000;
+	color: #000;
+	transition: 0.3s ease;
+    border-radius: none;
+	}
+
 #satu {
 	background: #1abc9c;
 	text-align:center;
 	}
 #satu:hover {
-	border: 5px solid #000;
+	background: #16a085;
 	}
 #dua {
 	background: #16a085;
@@ -66,7 +102,6 @@ body {
 	}
 #dua:hover {
 	background: #1abc9c;
-	border: 5px solid #000;
 	}
 #tiga {
 	background: #2ecc71;
@@ -74,7 +109,6 @@ body {
 	}
 #tiga:hover {
 	background: #27ae60;
-	border: 5px solid #000;
 	}
 #empat {
 	background: #27ae60;
@@ -82,7 +116,6 @@ body {
 	}
 #empat:hover {
 	background: #2ecc71;
-	border: 5px solid #000;
 	}
 #lima {
 	background: #3498db;
@@ -90,7 +123,6 @@ body {
 	}
 #lima:hover {
 	background: #2980b9;
-	border: 5px solid #000;
 	}
 #enam {
 	background: #2980b9;
@@ -98,7 +130,6 @@ body {
 	}
 #enam:hover {
 	background: #3498db;
-	border: 5px solid #000;
 	}
 #tujuh {
 	background: #9b59b6;
@@ -106,7 +137,6 @@ body {
 	}
 #tujuh:hover {
 	background: #8e44ad;
-	border: 5px solid #000;
 	}
 #lapan {
 	background: #8e44ad;
@@ -114,19 +144,17 @@ body {
 	}
 #lapan:hover {
 	background: #9b59b6;
-	border: 5px solid #000;
 	}
 #sem {
 	background: #34495e;
 	text-align:center;
 	}
-#semb {
+.semb {
 	text-align:center;
 	font-size:20px;
 }
 #sem:hover {
 	background: #2c3e50;
-	border: 5px solid #000;
 	}
 #sep {
 	background: #2c3e50;
@@ -134,7 +162,6 @@ body {
 	}
 #sep:hover {
 	background: #34495e;
-	border: 5px solid #000;
 	}
 #sebelas {
 	background: #f1c40f;
@@ -142,7 +169,6 @@ body {
 	}
 #sebelas:hover {
 	background: #f39c12;
-	border: 5px solid #000;
 	}
 #duabelas {
 	background: #f39c12;
@@ -150,7 +176,6 @@ body {
 	}
 #duabelas:hover {
 	background: #f1c40f;
-	border: 5px solid #000;
 	}
 #tigabelas {
 	background: #e67e22;
@@ -158,7 +183,6 @@ body {
 	}
 #tigabelas:hover {
 	background: #d35400;
-	border: 5px solid #000;
 	}
 #empatbelas {
 	background: #d35400;
@@ -166,7 +190,6 @@ body {
 	}
 #empatbelas:hover {
 	background: #e67e22;
-	border: 5px solid #000;
 	}
 #limabelas {
 	background: #e74c3c;
@@ -174,7 +197,6 @@ body {
 	}
 #limabelas:hover {
 	background: #c0392b;
-	border: 5px solid #000;
 	}
 #enambelas {
 	background: #c0392b;
@@ -182,7 +204,6 @@ body {
 	}
 #enambelas:hover {
 	background: #e74c3c;
-	border: 5px solid #000;
 	}
 #tujuhbelas {
 	background: #00FFFF;
@@ -190,7 +211,6 @@ body {
 	}
 #tujuhbelas:hover {
 	background: #00CCCC;
-	border: 5px solid #000;
 	}
 #lapanbelas {
 	background: #00CCCC;
@@ -198,7 +218,6 @@ body {
 	}	
 #lapanbelas:hover {
 	background: #00FFFF;
-	border: 5px solid #000;
 	}
 ::-webkit-scrollbar {
 	width: 15px;
@@ -304,14 +323,6 @@ dd {
 #whywhy {
 	overflow-y: scroll;
 	height: 700px;
-	}
-.nav > li > a:hover {
-	background: #99FFCC;
-	color: #000;
-	}
-#whywhy {
-	overflow-y: scroll;
-	height: 700px;
 	padding-top: 20px;
 	padding-left: 20px;
 	padding-right: 5px;
@@ -319,7 +330,7 @@ dd {
 	}
 #whywhy:hover {
 	box-shadow: 0 1px 1px #CC0099 inset, 0 0 12px #CC0099;color: #000;outline: 0 none;
-	transition: 0.6s ease-out;
+	transition: 2s ease-out;
 	}
 .nav > li > a:hover {
 	background: linear-gradient(to bottom, #FF99FF, #FFFF99, #99FF66, #00CCFF);
@@ -329,4 +340,16 @@ dd {
 .well {
 	border: 1px solid #FF6600;
 	background: #FFF;
+	}
+.inform {
+	background: #00CCFF;
+	}
+.inway {
+	background: #66FF66;
+	}
+.dangerss {
+	background: #FF66CC;
+	}
+.warn {
+	background: #FFFF00;
 	}
